tests/invalid/generated_binop_bitxor_bytes_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: None = None
    z = x ^ y
